--- a/Game.vcxproj.filters
+++ b/Game.vcxproj.filters
@@ -291,6 +291,12 @@
     <ClCompile Include="Source\MathUtils.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Enemy.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\CameraController.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shader\Sprite.hlsli">
